add menu nav movil

--- a/index.html
+++ b/index.html
@@ -147,12 +147,15 @@
                 <a class="logo-brand" href="">
                   <img src="images/logo.jpg" alt="">
                 </a>
-                <nav class="nav">
-                  <ul class="lista-nav header-menubar-corp">
+                <button class="c-hamburger c-hamburger--htx">
+                  <span></span>
+                </button>
+                <nav class="nav-menu nav sort-pages modify-pages" id="navigation" role="navigation">
+                  <ul class="lista-nav">
                     <li>
-                      <a href="">La Empresa</a>
+                      <a href="#;">La Empresa</a>
                       <span class="down-submenu-mobile">
-                        <i class="la la-chevron-circle-down"></i>
+                        <i class="arrow-top"></i>
                       </span>
                       <div class="child-menu">
                         <div class="container">
@@ -305,9 +308,9 @@
                       </div>
                     </li>
                     <li>
-                      <a href="">Noticias</a>
+                      <a href="#;">Noticias</a>
                       <span class="down-submenu-mobile">
-                        <i class="la la-chevron-circle-down"></i>
+                        <i class="arrow-top"></i>
                       </span>
                       <div class="child-menu">
                         <div class="container">
@@ -352,9 +355,9 @@
                       </div>
                     </li>
                     <li>
-                      <a href="">Nuevos clientes</a>
+                      <a href="#;">Nuevos clientes</a>
                       <span class="down-submenu-mobile">
-                        <i class="la la-chevron-circle-down"></i>
+                        <i class="arrow-top"></i>
                       </span>
                       <div class="child-menu">
                         <div class="container">
@@ -449,9 +452,9 @@
                       </div>
                     </li>
                     <li>
-                      <a href="">Centro de Ayuda</a>
+                      <a href="#;">Centro de Ayuda</a>
                       <span class="down-submenu-mobile">
-                        <i class="la la-chevron-circle-down"></i>
+                        <i class="arrow-top"></i>
                       </span>
                       <div class="child-menu">
                         <div class="container">
@@ -573,7 +576,7 @@
     <div class="slider">
       <div class="container-fluid">
         <div class="container">
-          <div class="row">
+          <div class="row row-slider">
             <div class="col">
               <div class="banner-info">
                 <h1>Que llegue hasta tu hogar es nuestro compromiso</h1>
@@ -1081,7 +1084,7 @@
       <section class="section-noticias">
         <div class="container">
           <div class="row">
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1089,7 +1092,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1097,7 +1100,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1105,7 +1108,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1113,7 +1116,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1121,7 +1124,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1129,7 +1132,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
@@ -1137,7 +1140,7 @@
                 <a href="#" class="btn-ver-mas">Ver más</a>
               </div>
             </div>
-            <div class="col-3">
+            <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
                 <div class="fecha-noticia">22-01-2021</div>
