--- a/index.html
+++ b/index.html
@@ -95,13 +95,15 @@
                     </div>
                     <div class="box-enlace-clima">
                       <p>Ver información sobre el río atmosferico y cambio climático</p>
-                      <i>
-                        <svg width="12" height="18" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M11.5 8.93496L2.80726 0.242188L0.798881 2.25056L7.52642 8.97811L0.798828 15.7057L2.80721 17.7141L11.5 9.02131L11.4568 8.97816L11.5 8.93496Z"
-                            fill="#2274FF" />
-                        </svg>
-                      </i>
+                      <a href="">
+                        <i>
+                          <svg width="12" height="18" viewBox="0 0 12 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M11.5 8.93496L2.80726 0.242188L0.798881 2.25056L7.52642 8.97811L0.798828 15.7057L2.80721 17.7141L11.5 9.02131L11.4568 8.97816L11.5 8.93496Z"
+                              fill="#2274FF" />
+                          </svg>
+                        </i>
+                      </a>
                     </div>
                   </div>
 
@@ -161,6 +163,82 @@
                       </g>
                     </svg>
                   </a>
+                  <div class="box-estado-clima">
+                    <div class="title-estado">
+                      Estado Operacional
+                    </div>
+                    <div class="lista-estado">
+                      <div class="row-estado">
+                        <i>
+                          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.9">
+                              <circle cx="13" cy="13.1602" r="11.75" fill="white" stroke="white" stroke-width="1.5"></circle>
+                              <path d="M15.2294 11.347C14.6617 10.4665 13.919 9.31463 13 7.74609C12.081 9.31463 11.3383 10.4671 10.7706 11.3476C9.57844 13.1982 9.13281 13.8905 9.13281 15.094C9.13281 17.2265 10.8675 18.9612 13 18.9612C15.1325 18.9612 16.8672 17.2265 16.8672 15.094C16.8672 13.888 16.4216 13.1963 15.2294 11.347Z" fill="#2274FF"></path>
+                              <path d="M13 2.16016C6.95877 2.16016 2 7.11832 2 13.1602C2 19.202 6.95877 24.1602 13 24.1602C19.0412 24.1602 24 19.202 24 13.1602C24 7.11832 19.0412 2.16016 13 2.16016ZM13 20.25C10.1562 20.25 7.84375 17.9369 7.84375 15.0938C7.84375 13.5107 8.42155 12.6145 9.68797 10.6494C10.3577 9.60892 11.2754 8.18455 12.4398 6.13829C12.6689 5.7367 13.3311 5.7367 13.5602 6.13829C14.7246 8.18455 15.6423 9.60832 16.3133 10.6481C17.5785 12.6119 18.1562 13.5088 18.1562 15.0938C18.1562 17.9369 15.8438 20.25 13 20.25Z" fill="#2274FF"></path>
+                            </g>
+                          </svg>
+                        </i>
+                        <div class="texto-estado">
+                          <div class="subtitle-estado">
+                            Normalidad
+                          </div>
+                          <p>Nuestro servicio se encuentra 
+                            operando con normalidad</p>
+                        </div>
+                      </div>
+                      <div class="row-estado">
+                        <i>
+                          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.5">
+                              <circle cx="13" cy="13.1602" r="11.75" fill="white" stroke="white" stroke-width="1.5"></circle>
+                              <path d="M15.2294 11.347C14.6617 10.4665 13.919 9.31463 13 7.74609C12.081 9.31463 11.3383 10.4671 10.7706 11.3476C9.57844 13.1982 9.13281 13.8905 9.13281 15.094C9.13281 17.2265 10.8675 18.9612 13 18.9612C15.1325 18.9612 16.8672 17.2265 16.8672 15.094C16.8672 13.888 16.4216 13.1963 15.2294 11.347Z" fill="#109954"></path>
+                              <path d="M13 2.16016C6.95877 2.16016 2 7.11832 2 13.1602C2 19.202 6.95877 24.1602 13 24.1602C19.0412 24.1602 24 19.202 24 13.1602C24 7.11832 19.0412 2.16016 13 2.16016ZM13 20.25C10.1562 20.25 7.84375 17.9369 7.84375 15.0938C7.84375 13.5107 8.42155 12.6145 9.68797 10.6494C10.3577 9.60892 11.2754 8.18455 12.4398 6.13829C12.6689 5.7367 13.3311 5.7367 13.5602 6.13829C14.7246 8.18455 15.6423 9.60832 16.3133 10.6481C17.5784 12.6119 18.1562 13.5088 18.1562 15.0938C18.1562 17.9369 15.8438 20.25 13 20.25Z" fill="#109954"></path>
+                            </g>
+                          </svg>
+                        </i>
+                        <div class="texto-estado">
+                          <div class="subtitle-estado">
+                            Alerta temprana preventiva
+                          </div>
+                          <p>Hemos activado acciones y movilizado recursos según nuestro protocolo de emergencia, ante alguna posibilidad de contigencia en nuestro servicio</p>
+                        </div>
+                      </div>
+                      <div class="row-estado">
+                        <i>
+                          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.5">
+                              <circle cx="13" cy="13.1602" r="11.75" fill="white" stroke="white" stroke-width="1.5"></circle>
+                              <path d="M15.2294 11.347C14.6617 10.4665 13.919 9.31463 13 7.74609C12.081 9.31463 11.3383 10.4671 10.7706 11.3476C9.57844 13.1982 9.13281 13.8905 9.13281 15.094C9.13281 17.2265 10.8675 18.9612 13 18.9612C15.1325 18.9612 16.8672 17.2265 16.8672 15.094C16.8672 13.888 16.4216 13.1963 15.2294 11.347Z" fill="#FFC700"></path>
+                              <path d="M13 2.16016C6.95877 2.16016 2 7.11832 2 13.1602C2 19.202 6.95877 24.1602 13 24.1602C19.0412 24.1602 24 19.202 24 13.1602C24 7.11832 19.0412 2.16016 13 2.16016ZM13 20.25C10.1562 20.25 7.84375 17.9369 7.84375 15.0938C7.84375 13.5107 8.42155 12.6145 9.68797 10.6494C10.3577 9.60892 11.2754 8.18455 12.4398 6.13829C12.6689 5.7367 13.3311 5.7367 13.5602 6.13829C14.7246 8.18455 15.6423 9.60832 16.3133 10.6481C17.5784 12.6119 18.1562 13.5088 18.1562 15.0938C18.1562 17.9369 15.8438 20.25 13 20.25Z" fill="#FFC700"></path>
+                            </g>
+                          </svg>
+                        </i>
+                        <div class="texto-estado">
+                          <div class="subtitle-estado">
+                            Alerta Amarilla
+                          </div>
+                          <p>La contigencia actual está afectando nuestra operación. Recomendamos juntar 15 litros de agua por persona para cubrir necesidades básicas</p>
+                        </div>
+                      </div>
+                      <div class="row-estado">
+                        <i>
+                          <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.5">
+                              <circle cx="13" cy="13.1602" r="11.75" fill="white" stroke="white" stroke-width="1.5"></circle>
+                              <path d="M15.2294 11.347C14.6617 10.4665 13.919 9.31463 13 7.74609C12.081 9.31463 11.3383 10.4671 10.7706 11.3476C9.57844 13.1982 9.13281 13.8905 9.13281 15.094C9.13281 17.2265 10.8675 18.9612 13 18.9612C15.1325 18.9612 16.8672 17.2265 16.8672 15.094C16.8672 13.888 16.4216 13.1963 15.2294 11.347Z" fill="#B60606"></path>
+                              <path d="M13 2.16016C6.95877 2.16016 2 7.11832 2 13.1602C2 19.202 6.95877 24.1602 13 24.1602C19.0412 24.1602 24 19.202 24 13.1602C24 7.11832 19.0412 2.16016 13 2.16016ZM13 20.25C10.1562 20.25 7.84375 17.9369 7.84375 15.0938C7.84375 13.5107 8.42155 12.6145 9.68797 10.6494C10.3577 9.60892 11.2754 8.18455 12.4398 6.13829C12.6689 5.7367 13.3311 5.7367 13.5602 6.13829C14.7246 8.18455 15.6423 9.60832 16.3133 10.6481C17.5784 12.6119 18.1562 13.5088 18.1562 15.0938C18.1562 17.9369 15.8438 20.25 13 20.25Z" fill="#B60606"></path>
+                            </g>
+                          </svg>
+                        </i>
+                        <div class="texto-estado">
+                          <div class="subtitle-estado">
+                            Alerta Roja
+                          </div>
+                          <p>Nuestro servicio se ve afectado por la actual contigencia. Nuestros equiposse encuentran trabajando para resolverla a la brevedad.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
