se agrega funcionalidad ocultar ultimos 4 elementos ul li

--- a/index.html
+++ b/index.html
@@ -1752,7 +1752,43 @@
       </section>
       <section class="section-noticias">
         <div class="container">
-          <div class="row">
+          <div class="row listado-noticias">
+            <div class="col-12 col-md-3">
+              <div class="item-noticia">
+                <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
+                <div class="fecha-noticia">22-01-2021</div>
+                <p>El acuerdo entre la principal sanitaria del país y la fundación viene a consolidar el trabajo
+                  iniciado en 2020 cuando se llevó a cabo la campaña</p>
+                <a href="#" class="btn-ver-mas">Ver más</a>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="item-noticia">
+                <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
+                <div class="fecha-noticia">22-01-2021</div>
+                <p>El acuerdo entre la principal sanitaria del país y la fundación viene a consolidar el trabajo
+                  iniciado en 2020 cuando se llevó a cabo la campaña</p>
+                <a href="#" class="btn-ver-mas">Ver más</a>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="item-noticia">
+                <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
+                <div class="fecha-noticia">22-01-2021</div>
+                <p>El acuerdo entre la principal sanitaria del país y la fundación viene a consolidar el trabajo
+                  iniciado en 2020 cuando se llevó a cabo la campaña</p>
+                <a href="#" class="btn-ver-mas">Ver más</a>
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              <div class="item-noticia">
+                <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
+                <div class="fecha-noticia">22-01-2021</div>
+                <p>El acuerdo entre la principal sanitaria del país y la fundación viene a consolidar el trabajo
+                  iniciado en 2020 cuando se llevó a cabo la campaña</p>
+                <a href="#" class="btn-ver-mas">Ver más</a>
+              </div>
+            </div>
             <div class="col-12 col-md-3">
               <div class="item-noticia">
                 <h3>Aguas Andinas firma nueva alianza con Techo-Chile para apoyar a familias vulnerables</h3>
@@ -1870,6 +1906,25 @@
                     <p>Operar siempre buscando la eficiencia, minimizando los impactos ambientales negativos y
                       promoviendo la innovación para reducir nuestra huella ambiental.</p>
                   </li>
+                  <li>
+                    <h4>DESARROLLO INTEGRAL DEL TRABAJADOR:</h4>
+                    <p>Fortalecer la cultura organizacional a través del involucramiento de los trabajadores, resguardando su integridad,
+                      potenciando su desarrollo y mejorando su calidad de vida.</p>
+                  </li>
+                  <li>
+                    <h4>INVOLUCRAMIENTO CON NUESTROS VECINOS::</h4>
+                    <p>Promover prácticas que fomenten el acceso y uso responsable del agua así como el desarrollo local de nuestras
+                      comunidades vecinas a los grandes centros operativos, promoviendo el diálogo y el respeto mutuo.</p>
+                  </li>
+                  <li>
+                    <h4>INNOVACIÓN</h4>
+                    <p>Impulsar la innovación como motor para la optimización de procesos, permitiendo así el desarrollo, promoción y
+                      aplicación de soluciones innovadoras con alto valor agregado.</p>
+                  </li>
+                  <li>
+                    <h4>ADAPTACIÓN AL CAMBIO CLIMÁTICO:</h4>
+                    <p>Actuar de manera proactiva en el desarrollo de políticas y prácticas en respuesta a los riesgos del cambio climático,en alianza con organizaciones públicas y privadas, aportando así al desarrollo sostenible del país.</p>
+                  </li>
                 </ul>
                 <div class="arte-footer">
                   <svg width="625" height="658" viewBox="0 0 625 658" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1919,7 +1974,7 @@
           </div>
           <div class="row-mostrar-footer">
             <div class="cta-mas-footer">
-              <a href="" class="btn btn-mostrar-noticias">
+              <a href="" class="btn btn-mostrar-politicas btn-mostrar-data">
                 Ver más
               </a>
             </div>
