fix responsive home

--- a/index.html
+++ b/index.html
@@ -1790,7 +1790,7 @@
       <section class="section-slider">
         <div class="container-fluid">
           <div class="container">
-            <div class="row">
+            <div class="row row-slider">
               <div class="col">
                 <h2>¿Cuán extremos e inusuales fueron los efectos del "río atmosférico"?</h2>
                 <div class="resume">Fenómeno marcó un récord por su turbiedad histórica y por la baja probabilidad de la
