--- a/login.html
+++ b/login.html
@@ -789,7 +789,7 @@
                       </div>
                       <button type="submit" class="btn btn-block btn-lg btn-login">Ingresar</button>
                       <div class="dual-btn">
-                        <a href="" class="btn btn-lg btn-registrame">Olvide mi contraseña</a>
+                        <a href="recupera-contrasena.html" class="btn btn-lg btn-registrame">Olvide mi contraseña</a>
                         <a href="" class="btn btn-lg btn-registrame">Registrarme</a>
                       </div>
                     </div>
