fix reponsive page login

--- a/login.html
+++ b/login.html
@@ -799,15 +799,15 @@
                 <div class="layout-redes">
                   <h3>Ingresa con tus redes sociales</h3>
                   <div class="box-redes-login">
-                    <a href="" class="btn btn-block btn-facebook btn-lg">
+                    <a href="" class="btn btn-redes btn-facebook btn-lg">
                       <i class="fa fa-facebook"></i>
                       <span>Facebook</span>
                     </a>
-                    <a href="" class="btn btn-block btn-google btn-lg">
+                    <a href="" class="btn btn-redes btn-google btn-lg">
                       <i class="fa fa-google"></i>
                       <span>Google</span>
                     </a>
-                    <a href="" class="btn btn-block btn-twitter btn-lg">
+                    <a href="" class="btn btn-redes btn-twitter btn-lg">
                       <i class="fa fa-twitter"></i>
                       <span>Twitter</span>
                     </a>
