se completa pagina restablecer contraseña

--- a/restablecer-contrasena.html
+++ b/restablecer-contrasena.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
-  <title>Recuperar contraseña</title>
+  <title>Restablecer contraseña</title>
 </head>
 
 <body class="page page-restablecer-contrasena">
@@ -756,7 +756,7 @@
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item"><a href="#">Web</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Login</li>
+                  <li class="breadcrumb-item active" aria-current="page">Restablecer contraseña</li>
                 </ol>
               </nav>
             </div>
