se completa pagina boleta

--- a/solicitar-boleta.html
+++ b/solicitar-boleta.html
@@ -779,7 +779,7 @@
                 <div class="banner-boleta">
                   <img src="images/banner-boleta.jpg" alt="">
                 </div>
-                <form action="" class="form-boleta">
+                <form action="" class="form-boleta" >
                   <div class="box-form-boleta">
 
                     <div class="row">
@@ -791,11 +791,11 @@
                           <li>Los campos marcados con asterisco (*) son obligatorios</li>
                         </ul>
                       </div>
-                      <div class="form-group col-12 col-md-3 margin-input">
+                      <div class="form-group col-12 col-md-2 margin-input">
                         <button type="submit" class="btn btn-lg btn-block btn-agregar">Agregar</button>
                       </div>
-                      <div class="form-group col-md-3 margin-input">
-                          <div class="input-group input-group-busqueda mb-2">
+                      <div class="form-group col-12  col-md-4 margin-input">
+                          <div class="input-group input-group-busqueda">
                             <div class="input-group-prepend">
                               <div class="input-group-text">
                                 <i class="fa fa-search" aria-hidden="true"></i>
@@ -859,8 +859,8 @@
                         </div>
                        </div>
                     </div>
-                    <div class="box-row row justify-content-md-center">
-                      <div class="col-10">
+                    <div class="box-row row-check row justify-content-md-center">
+                      <div class="col-12 col-md-10">
                         <div class="box-check">
                             <label>
                                 <input type="checkbox" class="bigcheck" name="cheese" value="yes"/>
@@ -872,7 +872,7 @@
                             <label>
                                 <input type="checkbox" class="bigcheck" name="cheese" value="yes"/>
                                 <span class="bigcheck-target"></span>
-                               <i> Acepto activar mi correo electrónico como canal de comunicacion con Aguas Andinas</i>
+                               <i> Acepto activar mi celular como canal de comunicación con Aguas Andinas</i>
                             </label>
                         </div>
                       </div>
@@ -880,9 +880,13 @@
                     <div class="box-boleta-recapcha row justify-content-md-center">
                       <div id="html_capcha"></div>
                       <button type="submit" class="btn btn-block btn-lg btn-login mt-4">Recibir boleta digital</button>
+                      <div class="texto-informa">
+                        <p><span>Al enviar este formulario,</span> dejarás de recibir tu boleta y notificaciones en papel</p>
+                      </div>
                     </div>
                   </div>
                 </form>
+
                </div>
             </div>
           </div>
