--- a/registro-usuario2.html
+++ b/registro-usuario2.html
@@ -888,7 +888,7 @@
                          <div class="row-layout">
                            <div class="layout-formulario">
                              <form class="formulario-login">
-                               <h3>Registro con tus redes sociales</h3>
+                               <h3>Ingresa nombre de usuario y contraseña</h3>
                                <div class="form-group-all">
                                  <div class="form-group">
                                    <input type="text" class="form-control form-control-lg"
