actualiza mobil home

--- a/index.html
+++ b/index.html
@@ -956,7 +956,7 @@
               <div class="col">
                 <div class="box-factibilidad">
                   <h2>Revisa tu factibilidad</h2>
-                  <img src="images/banner-agua.jpg" alt="">
+                  <img src="images/factibilidad.png" alt="">
                 </div>
               </div>
               <div class="col">
@@ -1091,7 +1091,7 @@
                   </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                  <div class="tab-pane fade" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 
                     <div class="resultado-mapa">
                       <div class="lista-mapa">
@@ -1529,7 +1529,7 @@
                     </div>
 
                   </div>
-                  <div class="tab-pane fade" id="nav-pago" role="tabpanel" aria-labelledby="nav-pago-tab">
+                  <div class="tab-pane fade  show active" id="nav-pago" role="tabpanel" aria-labelledby="nav-pago-tab">
 
                     <div class="resultado-mapa">
                       <div class="lista-mapa">
@@ -1748,29 +1748,59 @@
                           <div class="content-slider-pago">
                             <ul class="slider-pago">
                               <li class="active">
-                                <a href="">
+                                <a href="#;">
                                   <span>TODOS</span>
                                 </a>
+                                <i>
+                                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                                    <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                                    </svg>
+                                </i>
                               </li>
                               <li>
-                                <a href="">
+                                <a href="#;">
                                   <img src="images/servipag.png" alt="">
                                 </a>
+                                <i>
+                                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                                    <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                                    </svg>
+                                </i>
                               </li>
                               <li>
-                                <a href="">
+                                <a href="#;">
                                   <img src="images/caja-vecina.png" alt="">
                                 </a>
+                                <i>
+                                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                                    <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                                    </svg>
+                                </i>
                               </li>
                               <li>
-                                <a href="">
+                                <a href="#;">
                                   <img src="images/servi-facil.png" alt="">
                                 </a>
+                                <i>
+                                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                                    <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                                    </svg>
+                                </i>
                               </li>
                               <li>
-                                <a href="">
+                                <a href="#;">
                                   <img src="images/sencillito.png" alt="">
                                 </a>
+                                <i>
+                                  <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="13.2486" cy="12.2784" r="8.86087" fill="white"/>
+                                    <path d="M12.0307 0.769531C5.57708 0.769531 0.326172 6.02043 0.326172 12.4741C0.326172 18.9277 5.57708 24.1786 12.0307 24.1786C18.4843 24.1786 23.7352 18.9277 23.7352 12.4741C23.7352 6.02043 18.4843 0.769531 12.0307 0.769531ZM18.5723 9.39392L11.092 16.8156C10.652 17.2556 9.94794 17.2849 9.47859 16.8449L5.51841 13.2368C5.04905 12.7967 5.01972 12.0634 5.4304 11.594C5.87042 11.1247 6.60379 11.0953 7.07314 11.5354L10.212 14.4101L16.9003 7.72185C17.3696 7.25249 18.103 7.25249 18.5723 7.72185C19.0417 8.1912 19.0417 8.92457 18.5723 9.39392Z" fill="#2274FF"/>
+                                    </svg>
+                                </i>
                               </li>
                             </ul>
                           </div>
