--- a/cuenta-personas.html
+++ b/cuenta-personas.html
@@ -786,7 +786,7 @@
                         </a>
                         <p>Registro</p>
                     </div>
-                    <div class="step-item ">
+                    <div class="step-item active">
                         <a class="step-item-link" href="#!">
                           <span>2</span>
                           <!-- <span>Agregar Cuentas</span> -->
