--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@
                   </div>
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
-                  <div class="tab-pane fade" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
 
                     <div class="resultado-mapa">
                       <div class="lista-mapa">
@@ -1529,7 +1529,7 @@
                     </div>
 
                   </div>
-                  <div class="tab-pane fade  show active" id="nav-pago" role="tabpanel" aria-labelledby="nav-pago-tab">
+                  <div class="tab-pane fade  " id="nav-pago" role="tabpanel" aria-labelledby="nav-pago-tab">
 
                     <div class="resultado-mapa">
                       <div class="lista-mapa">
