--- a/solicitar-boleta.html
+++ b/solicitar-boleta.html
@@ -877,7 +877,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="box-boleta-recapcha row justify-content-md-center">
+                    <div class="box-boleta-recapcha row justify-content-center">
                       <div id="html_capcha"></div>
                       <button type="submit" class="btn btn-block btn-lg btn-login mt-4">Recibir boleta digital</button>
                       <div class="texto-informa">
