--- a/cuenta-personas2.html
+++ b/cuenta-personas2.html
@@ -817,6 +817,11 @@
                     <a href="" class="btn btn-lg  btn-outline-primary">Seguir configurando mis preferencias</a>
                   </div>
 
+                  <div class="row-texto-form mt-4 margin-texto">
+                    <p>Al crear una cuenta, aceptas las Condiciones de Uso y el Aviso de Privacidad de aguasandinas.cl</p>
+                    <p>¿Ya tienes una cuenta? <a href="">Iniciar sesión</a></p>
+                  </div>
+
                 </div>
                
 
