--- a/login.html
+++ b/login.html
@@ -780,7 +780,7 @@
                       <div class="form-group">
                         <input type="password" class="form-control form-control-lg" placeholder="Contraseña">
                       </div>
-                      <div class="box-switch">
+                      <div class="box-switch space-switch">
                         <label class="switch custom-switch">
                           <input type="checkbox" id="customSwitches">
                           <span class="slider round"></span>
