restructura nombre templates

--- a/solicitar-boleta.html
+++ b/solicitar-boleta.html
@@ -863,7 +863,7 @@
                       <div class="col-12 col-md-10">
                         <div class="box-check">
                             <label>
-                                <input type="checkbox" class="bigcheck" name="cheese" value="yes"/>
+                                <input type="checkbox" class="bigcheck" name="cheese" value="yes" checked/>
                                 <span class="bigcheck-target"></span>
                               <i> Acepto activar mi correo electrónico como canal de comunicacion con Aguas Andinas</i>
                             </label>
