--- a/crear-cuenta-2.html
+++ b/crear-cuenta-2.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
-  <title>Registro Usuario</title>
+  <title>Crear cuenta 2</title>
 </head>
 
 <body class="page page-registro-usuario">
