--- a/cuenta-personas-registro.html
+++ b/cuenta-personas-registro.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
-  <title>Datos Personales</title>
+  <title>Cuenta personas registro</title>
 </head>
 
 <body class="page page-datos-personales">
