factoring class name titles

--- a/estado-medidor.html
+++ b/estado-medidor.html
@@ -767,7 +767,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Súmate a la Boleta digital</h2>
+              <h2 class="main-title">Súmate a la Boleta digital</h2>
               <div class="content-page-boleta">
                 <div class="content-mensaje">
                   <div class="box-mensaje">
