--- a/login.html
+++ b/login.html
@@ -767,7 +767,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Iniciar sesión</h2>
+              <h2 class="main-title">Iniciar sesión</h2>
               <div class="content-page">
                 <div class="layout-formulario">
                   <form class="formulario-login">
