--- a/recuperar-contrasena-2.html
+++ b/recuperar-contrasena-2.html
@@ -767,7 +767,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Olvide mi contraseña</h2>
+              <h2 class="main-title">Olvide mi contraseña</h2>
               <div class="content-page-clave">
                 <div class="layout-formulario-clave">
                   <div class="box-icono-correo">
