--- a/crear-cuenta-2.html
+++ b/crear-cuenta-2.html
@@ -767,7 +767,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Registro de usuarios</h2>
+              <h2 class="main-title">Registro de usuarios</h2>
               <div class="content-page">
 
                 <div class="box-steps">
