--- a/descarga-tu-boleta.html
+++ b/descarga-tu-boleta.html
@@ -825,7 +825,7 @@
           </div>
         </div>
       </section>
-      <section class="section-datos">
+      <section class="section-datos-boleta">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
