--- a/recuperar-contrasena-1.html
+++ b/recuperar-contrasena-1.html
@@ -774,7 +774,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Olvide mi contraseña</h2>
+              <h2 class="main-title">Olvide mi contraseña</h2>
               <div class="content-page-clave">
                 <div class="layout-formulario-clave">
                   <form action="" class="formulario-login">
