--- a/recuperar-contrasena-3.html
+++ b/recuperar-contrasena-3.html
@@ -767,7 +767,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Restablecer contraseña</h2>
+              <h2 class="main-title">Restablecer contraseña</h2>
               <div class="content-page-clave">
                 <div class="layout-formulario-clave">
                   
