--- a/solicitar-boleta.html
+++ b/solicitar-boleta.html
@@ -774,7 +774,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <h2>Súmate a la Boleta digital</h2>
+              <h2 class="main-title">Súmate a la Boleta digital</h2>
               <div class="content-page-boleta">
                 <div class="banner-boleta">
                   <img src="images/banner-boleta.jpg" alt="">
